fix slider, needed fix invisible slider

--- a/src/sass/blocks/_blog.scss
+++ b/src/sass/blocks/_blog.scss
@@ -51,8 +51,11 @@
     }
     &__prev {
         left: -200px !important;
+        z-index: 99999999 !important;
     }
     &__next {
+        z-index: 99999999 !important;
+
         right: -200px !important;
     }
    
